--- a/Nib.Web/ClientApp/app/components/home/home.component.html
+++ b/Nib.Web/ClientApp/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <h3>Hello World</h3>
+        
         <br />
         <br />
         <br />
@@ -8,6 +8,7 @@
 
 </div>
 <div class="row">
-    <div class="table-responsive">        
+    <div class="table-responsive"> 
+        <h3>{{title}}</h3>
     </div>
 </div>   
